# landstrip

./: .gitignore  Cargo.toml  Makefile  README.md  index.test.ts  index.ts  package-lock.json  package.json  rust-toolchain.toml  sandbox.json  shared.ts  tsconfig.json  tui.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-npm.yml  release.yml
.opencode/: opencode.json
lib/: index.d.ts  index.js
man/man1/: landstrip.1
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-arm64/: package.json
npm/win32-x64/: package.json
scripts/: publish.sh  release.sh  test-extensions.sh  update-npm-integrity.mjs
src/: backend.rs  cli.rs  config.rs  error.rs  error_fd.rs  fallback.rs  landlock.rs  linux.rs  macos.rs  main.rs  policy.rs  seccomp.rs  trap.rs  trap_fd.rs  traversal.rs  windows.rs
src/engine/: error.rs  mod.rs  policy.rs  trap.rs  trap_fd.rs
src/linux/: fd.rs  landlock.rs  mod.rs  seccomp.rs
src/platform/: fallback.rs  macos.rs  mod.rs  windows.rs
src/platform/linux/: fd.rs  filter.rs  landlock.rs  mod.rs  seccomp.rs
src/platform/windows/: appcontainer.rs  mod.rs
src/platform/windows/restricted_user/: access.rs  account.rs  broker.rs  lease.rs  manage.rs  mod.rs  state.rs  wfp.rs  worker.rs
test/: bash-idempotency.test.mjs  shared-parser.test.mjs
tests/: data.rs  data.txt  sandbox.ps1  sandbox.rs  sandbox.sh
