[package]
authors = ["Jarkko Sakkinen <jarkko.sakkinen@iki.fi>"]
description = "Sandbox for coding agents with parametrized state"
edition = "2024"
license = "LGPL-2.1-or-later"
homepage = "https://github.com/jarkkojs/landstrip"
repository = "https://github.com/jarkkojs/landstrip"
name = "landstrip"
readme = "README.md"
rust-version = "1.85"
version = "0.8.0"

[dependencies]
argh = "0.1.19"
dirs = "6.0.0"
env_logger = "0.11.10"
libc = "0.2"
log = "0.4.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.28"
strum_macros = "0.28"
thiserror = "2.0.18"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libseccomp = "0.4"
nix = { version = "0.30", features = ["fs", "poll", "process", "socket", "uio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }
