
[package]
authors = ["Jarkko Sakkinen <jarkko.sakkinen@iki.fi>"]
description = "Sandbox for coding agents with parametrized state"
edition = "2024"
license = "LGPL-2.1-or-later"
homepage = "https://github.com/landstrip/landstrip"
repository = "https://github.com/landstrip/landstrip"
name = "landstrip"
readme = "README.md"
rust-version = "1.85"
version = "0.17.34"
autotests = false

[[test]]
name = "data"
path = "tests/data.rs"
harness = false

[dependencies]
anyhow = "1.0"
argh = "0.1.19"
dirs = "6.0.0"
env_logger = "0.11.10"
libc = "0.2"
log = "0.4.30"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.13"
strum = "0.28"
strum_macros = "0.28"
zeroize = "1.8"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"
nix = { version = "0.31", features = ["fs", "ioctl", "poll", "process", "socket", "uio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Security_Isolation",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Rpc",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

